fixed table overflow on user page

--- a/web-app/static/user-page/user-style.css
+++ b/web-app/static/user-page/user-style.css
@@ -49,7 +49,6 @@ table {
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
-    width: 800px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
